--- a/workspace/JudasFX/src/org/iugonet/www/Calculate.fxml
+++ b/workspace/JudasFX/src/org/iugonet/www/Calculate.fxml
@@ -21,13 +21,13 @@
                               <GridPane layoutX="10.0" layoutY="5.0" prefHeight="550.0" prefWidth="700.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="47.0" prefWidth="300.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="16.0" minWidth="16.0" percentWidth="8.0" prefWidth="16.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" percentWidth="8.0" prefWidth="40.0" />
                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="10.0" percentWidth="45.0" prefWidth="240.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints maxHeight="97.0" minHeight="100.0" percentHeight="5.0" prefHeight="100.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" percentHeight="86.0" prefHeight="363.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="169.0" minHeight="10.0" percentHeight="9.0" prefHeight="15.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <HBox alignment="CENTER_LEFT" snapToPixel="false">
@@ -138,11 +138,11 @@
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints maxHeight="98.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="310.0" minHeight="10.0" prefHeight="212.0" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="144.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="244.0" minHeight="10.0" prefHeight="211.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="73.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <Label lineSpacing="10.0" text="Insert Function:">
