--- a/workspace/JudasFX/src/org/iugonet/www/JudasFXPreloader.fxml
+++ b/workspace/JudasFX/src/org/iugonet/www/JudasFXPreloader.fxml
@@ -6,17 +6,24 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="295.0" prefWidth="455.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="305.0" prefWidth="455.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="108.0" layoutY="60.0" prefHeight="295.0" prefWidth="455.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane prefHeight="305.0" prefWidth="455.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="295.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="10.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <ImageView fitHeight="295.0" fitWidth="455.0" layoutX="108.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+            <ProgressBar prefWidth="495.0" progress="0.0" GridPane.rowIndex="1" />
+            <ImageView fitHeight="295.0" fitWidth="455.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@icons/splash.png" />
                </image>
             </ImageView>
-            <ProgressBar fx:id="progressBar" layoutX="128.0" layoutY="231.0" prefHeight="10.0" prefWidth="455.0" progress="0.0" />
          </children>
-      </VBox>
+      </GridPane>
    </children>
 </AnchorPane>
