--- a/workspace/JudasFX/src/org/iugonet/www/ManageDataAndImportExportTplotVariables.fxml
+++ b/workspace/JudasFX/src/org/iugonet/www/ManageDataAndImportExportTplotVariables.fxml
@@ -16,13 +16,13 @@
                <children>
                   <GridPane prefHeight="555.0" prefWidth="798.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="383.0" minWidth="10.0" prefWidth="383.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="44.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="371.0" minWidth="10.0" prefWidth="371.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="40.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="271.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="539.0" minHeight="10.0" prefHeight="520.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <ListView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
@@ -136,6 +136,9 @@
                      <tooltip>
                         <Tooltip text="OK" />
                      </tooltip>
+                     <font>
+                        <Font size="11.0" />
+                     </font>
                   </Button>
                </children>
             </AnchorPane>
