--- a/workspace/JudasFX/src/org/iugonet/www/PlotLayoutOptions.fxml
+++ b/workspace/JudasFX/src/org/iugonet/www/PlotLayoutOptions.fxml
@@ -19,12 +19,12 @@
                            <children>
                               <GridPane prefHeight="542.0" prefWidth="631.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="263.0" minWidth="10.0" prefWidth="263.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="87.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="230.0" minWidth="10.0" prefWidth="200.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="80.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints maxHeight="175.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                   <RowConstraints maxHeight="437.0" minHeight="10.0" prefHeight="437.0" vgrow="SOMETIMES" />
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
@@ -249,6 +249,9 @@
                                              <tooltip>
                                                 <Tooltip text="Integer:" />
                                              </tooltip>
+                                             <font>
+                                                <Font size="11.0" />
+                                             </font>
                                           </TextField>
                                           <HBox GridPane.columnIndex="2" GridPane.rowIndex="5">
                                              <children>
@@ -263,6 +266,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Down" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                                 <Button layoutX="76.0" layoutY="344.0" mnemonicParsing="false">
                                                    <graphic>
@@ -275,6 +281,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Up" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                              </children>
                                           </HBox>
@@ -287,6 +296,9 @@
                                              <tooltip>
                                                 <Tooltip text="Integer:" />
                                              </tooltip>
+                                             <font>
+                                                <Font size="11.0" />
+                                             </font>
                                           </TextField>
                                           <HBox GridPane.columnIndex="2" GridPane.rowIndex="4">
                                              <children>
@@ -300,6 +312,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Down" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                                 <Button layoutX="76.0" layoutY="344.0" mnemonicParsing="false">
                                                    <graphic>
@@ -311,6 +326,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Up" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                              </children>
                                           </HBox>
@@ -323,6 +341,9 @@
                                              <tooltip>
                                                 <Tooltip text="Integer:" />
                                              </tooltip>
+                                             <font>
+                                                <Font size="11.0" />
+                                             </font>
                                           </TextField>
                                           <HBox GridPane.columnIndex="2" GridPane.rowIndex="3">
                                              <children>
@@ -336,6 +357,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Down" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                                 <Button layoutX="76.0" layoutY="344.0" mnemonicParsing="false">
                                                    <graphic>
@@ -347,6 +371,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Up" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                              </children>
                                           </HBox>
@@ -359,6 +386,9 @@
                                              <tooltip>
                                                 <Tooltip text="Integer:" />
                                              </tooltip>
+                                             <font>
+                                                <Font size="11.0" />
+                                             </font>
                                           </TextField>
                                           <HBox GridPane.columnIndex="2" GridPane.rowIndex="2">
                                              <children>
@@ -372,6 +402,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Down" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                                 <Button layoutX="76.0" layoutY="344.0" mnemonicParsing="false">
                                                    <graphic>
@@ -383,6 +416,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Up" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                              </children>
                                           </HBox>
@@ -395,6 +431,9 @@
                                              <tooltip>
                                                 <Tooltip text="Integer:" />
                                              </tooltip>
+                                             <font>
+                                                <Font size="11.0" />
+                                             </font>
                                           </TextField>
                                           <HBox GridPane.columnIndex="2" GridPane.rowIndex="1">
                                              <children>
@@ -408,6 +447,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Down" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                                 <Button layoutX="76.0" layoutY="344.0" mnemonicParsing="false">
                                                    <graphic>
@@ -419,6 +461,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Up" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                              </children>
                                           </HBox>
@@ -431,6 +476,9 @@
                                              <tooltip>
                                                 <Tooltip text="Integer:" />
                                              </tooltip>
+                                             <font>
+                                                <Font size="11.0" />
+                                             </font>
                                           </TextField>
                                           <HBox GridPane.columnIndex="2">
                                              <children>
@@ -444,6 +492,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Down" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                                 <Button layoutX="76.0" layoutY="344.0" mnemonicParsing="false">
                                                    <graphic>
@@ -455,6 +506,9 @@
                                                    <tooltip>
                                                       <Tooltip text="Up" />
                                                    </tooltip>
+                                                   <font>
+                                                      <Font size="11.0" />
+                                                   </font>
                                                 </Button>
                                              </children>
                                           </HBox>
